# atmoswing

./: .clang-format  .codecov.yml  .dockerignore  .gitignore  .hgignore  .hgsub  .hgsubstate  .travis.yml  CLAUDE.md  CMakeLists.txt  appveyor.yml  bitbucket-pipelines.yml  changelog.md  conanfile.py  notice.txt  readme.md  vcpkg.json
benchmark/: CMakeLists.txt
benchmark/files/: parameters_bench_1.xml
benchmark/src/: benchmark.cpp
src/app_downscaler/: CMakeLists.txt
src/app_downscaler/core/: AtmoSwingAppDownscaler.cpp  AtmoSwingAppDownscaler.h  AtmoswingAppDownscaler.cpp  AtmoswingAppDownscaler.h  asFileParametersDownscaling.cpp  asFileParametersDownscaling.h  asGlobVarsDownscaler.cpp  asGlobVarsDownscaler.h  asMethodDownscaler.cpp  asMethodDownscaler.h  asMethodDownscalerClassic.cpp  asMethodDownscalerClassic.h  asMethodDownscalerSingle.cpp  asMethodDownscalerSingle.h  asParametersDownscaling.cpp  asParametersDownscaling.h  asPredictorModSim.cpp  asPredictorModSim.h  asPredictorProj.cpp  asPredictorProj.h  asPredictorProjCMIP5.cpp  asPredictorProjCMIP5.h  asPredictorProjCmip5.cpp  asPredictorProjCmip5.h  asPredictorProjCordex.cpp  asPredictorProjCordex.h  asPredictorScenario.cpp  asPredictorScenario.h
src/app_downscaler/gui/: AtmoSwingDownscalerGui.cpp  AtmoSwingDownscalerGui.fbp  AtmoSwingDownscalerGui.h  AtmoSwingMainDownscaler.cpp  AtmoSwingMainDownscaler.h  AtmoswingDownscalerGui.cpp  AtmoswingDownscalerGui.fbp  AtmoswingDownscalerGui.h  AtmoswingMainDownscaler.cpp  AtmoswingMainDownscaler.h  asFrameDownscaler.cpp  asFrameDownscaler.h  asFramePreferencesDownscaler.cpp  asFramePreferencesDownscaler.h
src/app_forecaster/: CMakeLists.txt  mainpage.dox
src/app_forecaster/app/: AtmoswingAppForecaster.cpp  AtmoswingAppForecaster.h  AtmoswingMainForecaster.cpp  AtmoswingMainForecaster.h
src/app_forecaster/core/: AtmoSwingAppForecaster.cpp  AtmoSwingAppForecaster.h  AtmoswingAppForecaster.cpp  AtmoswingAppForecaster.h  asBatchForecasts.cpp  asBatchForecasts.h  asFileBatchForecasts.cpp  asFileBatchForecasts.h  asFileForecastingModels.cpp  asFileForecastingModels.h  asFileParametersForecast.cpp  asFileParametersForecast.h  asGlobVars.cpp  asGlobVars.h  asGlobVarsForecaster.cpp  asGlobVarsForecaster.h  asMethodForecasting.cpp  asMethodForecasting.h  asParametersForecast.cpp  asParametersForecast.h  asPredictorOper.cpp  asPredictorOper.h  asPredictorOperCustomFvg.cpp  asPredictorOperCustomFvgForecast.cpp  asPredictorOperCustomFvgForecast.h  asPredictorOperCustomVigicruesIfs.cpp  asPredictorOperCustomVigicruesIfs.h  asPredictorOperEcmwfIfs.cpp  asPredictorOperEcmwfIfs.h  asPredictorOperGfsForecast.cpp  asPredictorOperGfsForecast.h  asPredictorOperGfsForecastLocal.cpp  asPredictorOperGfsForecastLocal.h  asPredictorOperIfsForecast.cpp  asPredictorOperIfsForecast.h  asPredictorOperMfArpege.cpp  asPredictorOperMfArpege.h  asPredictorOperNwsGfs.cpp  asResultsForecast.cpp  (+4 more)
src/app_optimizer/: CMakeLists.txt
src/app_viewer/: CMakeLists.txt
src/shared_base/: CMakeLists.txt
src/shared_processing/: CMakeLists.txt
tests/: CMakeLists.txt
tests/files/: batch_forecaster.xml  catalog_precipitation_somewhere.xml  file_xml.xml  file_xml_error.xml  forecast_score_03.txt  forecast_score_05.txt  forecast_score_06.txt  forecast_score_07.txt  parameters_calibration_R1_calib_period.xml  parameters_calibration_R1_full.xml  parameters_calibration_R1_full_no_preproc.xml  parameters_calibration_R1_preload.xml  parameters_calibration_R1_shorter.xml  parameters_calibration_R2_calib_period.xml  parameters_calibration_R2_calib_period_merge_by_half.xml  parameters_calibration_R2_full.xml  parameters_calibration_R2_preload.xml  parameters_calibration_compare_no_preload.xml  parameters_calibration_compare_preload.xml  parameters_calibration_compare_preproc_no_preload.xml  parameters_calibration_compare_preproc_preload.xml  parameters_calibration_compare_smaller_no_preproc_no_preload.xml  parameters_calibration_compare_smaller_no_preproc_preload.xml  parameters_calibration_compare_smaller_preproc_no_preload.xml  parameters_calibration_compare_smaller_preproc_preload.xml  parameters_calibration_normalized_RMSE_criteria.xml  parameters_calibration_normalized_S1_criteria.xml  parameters_calibration_preload_multiple_variables.xml  parameters_calibration_read.xml  parameters_downscaling.xml  parameters_forecasting_6hrly.xml  parameters_forecasting_daily.xml  parameters_optimization.xml  parameters_standard_multiple_station_ids.xml  parameters_standard_read.xml  parameters_standard_sort_level_time.xml  score_01.txt  workspace_example_1.asvw
tests/src/: asAreaCompGaussGridTest.cpp  asAreaCompGenGridTest.cpp  asAreaCompGridTest.cpp  asAreaCompRegGridTest.cpp  asAreaCompTest.cpp  asAreaGridTest.cpp  asAreaRegGridTest.cpp  asAreaTest.cpp  asCatalogPredictandsTest.cpp  asCriteriaTest.cpp  asCuda.cu  asCuda.cuh  asCudaTest.cpp  asDataPredictandPrecipitationTest.cpp  asDataPredictorArchiveEcmwfCera20CRegularGridTest.cpp  asDataPredictorArchiveEcmwfEra20CRegularGridTest.cpp  asDataPredictorArchiveJmaJra55SubsetRegularGridTest.cpp  asDataPredictorArchiveNasaMerra2RegularGridTest.cpp  asDataPredictorArchiveNcepCfsrGeneralGridTest.cpp  asDataPredictorArchiveNcepCfsrRegularGridTest.cpp  asDataPredictorArchiveNcepCfsrSubsetRegularGridTest.cpp  asDataPredictorArchiveNcepR1v2003GaussianGridTest.cpp  asDataPredictorArchiveNcepR1v2003GeneralGridTest.cpp  asDataPredictorArchiveNcepR1v2003RegularGridTest.cpp  asDataPredictorArchiveNcepR2GaussianGridTest.cpp  asDataPredictorArchiveNcepR2GeneralGridTest.cpp  asDataPredictorArchiveNcepR2RegularGridTest.cpp  asDataPredictorArchiveNoaa20Cr2cEnsembleRegularGridTest.cpp  asDataPredictorArchiveNoaa20Cr2cRegularGridTest.cpp  asDataPredictorRealtimeNwsGfsGeneralGridTest.cpp  asDataPredictorRealtimeNwsGfsRegularGridTest.cpp  asExceptionTest.cpp  asFileXmlTest.cpp  asForecastScoreTest.cpp  asGeoAreaCompositeGaussianGridTest.cpp  asGeoAreaCompositeGeneralGridTest.cpp  asGeoAreaCompositeRegularGridTest.cpp  asGeoAreaCompositeTest.cpp  asGeoAreaRegularGridTest.cpp  asGeoAreaTest.cpp  (+76 more)
(+1653 files in other folders)
